frame/support/test/tests/pallet_ui/call_invalid_const.stderr
error: Invalid pallet::call, only method accepted
  --> $DIR/call_invalid_const.rs:17:3
   |
17 |         const Foo: u8 = 3u8;
   |         ^^^^^
